feat: system-ui font-family

--- a/src/app.css
+++ b/src/app.css
@@ -33,6 +33,17 @@
   }
 }
 
+/* === My changes === */
+
+/* NOTE: Use the system-ui font
+   SOURCE: https://css-tricks.com/snippets/css/system-font-stack
+*/
+body {
+  font-family:
+    system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 h1 {
   @apply text-3xl font-medium;
 }
