--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @plugin "@iconify/tailwind4" {
-  prefixes: mdi, lucide;
+  prefixes: lucide;
   backgroundselector: ".icon-bg";
   maskselector: ".icon";
   iconselector: ".{prefix}/{name}";
@@ -13,104 +13,95 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: oklch(1 0 0);
-  --foreground: oklch(0 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0 0 0);
-  --primary: oklch(0.65 0.24 26.92);
-  --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.97 0.21 109.74);
-  --secondary-foreground: oklch(0 0 0);
-  --muted: oklch(0.96 0 0);
-  --muted-foreground: oklch(0.32 0 0);
-  --accent: oklch(0.56 0.24 260.83);
-  --accent-foreground: oklch(1 0 0);
-  --destructive: oklch(0 0 0);
-  --border: oklch(0 0 0);
-  --input: oklch(0 0 0);
-  --ring: oklch(0.65 0.24 26.92);
-  --chart-1: oklch(0.65 0.24 26.92);
-  --chart-2: oklch(0.97 0.21 109.74);
-  --chart-3: oklch(0.56 0.24 260.83);
-  --chart-4: oklch(0.73 0.25 142.5);
-  --chart-5: oklch(0.59 0.27 328.36);
-  --sidebar: oklch(0.96 0 0);
-  --sidebar-foreground: oklch(0 0 0);
-  --sidebar-primary: oklch(0.65 0.24 26.92);
-  --sidebar-primary-foreground: oklch(1 0 0);
-  --sidebar-accent: oklch(0.56 0.24 260.83);
-  --sidebar-accent-foreground: oklch(1 0 0);
-  --sidebar-border: oklch(0 0 0);
-  --sidebar-ring: oklch(0.65 0.24 26.92);
+  --background: oklch(0.97 0.02 225.66);
+  --foreground: oklch(0.15 0.02 269.18);
+  --card: oklch(0.98 0.01 228.79);
+  --card-foreground: oklch(0.15 0.02 269.18);
+  --popover: oklch(0.98 0.01 238.45);
+  --popover-foreground: oklch(0.15 0.02 269.18);
+  --primary: oklch(0.71 0.15 239.15);
+  --primary-foreground: oklch(0.94 0.03 232.39);
+  --secondary: oklch(0.91 0.03 229.20);
+  --secondary-foreground: oklch(0.15 0.02 269.18);
+  --muted: oklch(0.89 0.02 225.69);
+  --muted-foreground: oklch(0.36 0.03 231.55);
+  --accent: oklch(0.88 0.02 235.72);
+  --accent-foreground: oklch(0.34 0.05 229.20);
+  --destructive: oklch(0.61 0.24 20.96);
+  --border: oklch(0.82 0.02 240.77);
+  --input: oklch(0.82 0.02 240.77);
+  --ring: oklch(0.55 0.10 235.72);
+  --chart-1: oklch(0.57 0.11 228.92);
+  --chart-2: oklch(0.45 0.10 270.08);
+  --chart-3: oklch(0.65 0.15 159.03);
+  --chart-4: oklch(0.75 0.10 100.01);
+  --chart-5: oklch(0.55 0.15 299.88);
+  --sidebar: oklch(0.93 0.01 238.46);
+  --sidebar-foreground: oklch(0.15 0.02 269.18);
+  --sidebar-primary: oklch(0.57 0.11 228.92);
+  --sidebar-primary-foreground: oklch(0.99 0.01 203.97);
+  --sidebar-accent: oklch(0.88 0.02 235.72);
+  --sidebar-accent-foreground: oklch(0.15 0.02 269.18);
+  --sidebar-border: oklch(0.82 0.02 240.77);
+  --sidebar-ring: oklch(0.57 0.11 228.92);
 
-  --font-sans: DM Sans, sans-serif;
-  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  --font-mono: Space Mono, monospace;
+  --font-sans: 'Source Code Pro', 'Geist', 'Geist Fallback', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --font-serif: 'Source Serif 4', 'Geist', 'Geist Fallback', ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
+  --font-mono: 'Source Code Pro', 'Geist Mono', 'Geist Mono Fallback', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 
-  --radius: 0px;
-
-  --shadow-2xs: 4px 4px 0px 0px oklch(0 0 0 / 0.5);
-  --shadow-xs: 4px 4px 0px 0px oklch(0 0 0 / 0.5);
-  --shadow-sm:
-    4px 4px 0px 0px oklch(0 0 0 / 1), 4px 1px 2px -1px oklch(0 0 0 / 1);
-  --shadow: 4px 4px 0px 0px oklch(0 0 0 / 1), 4px 1px 2px -1px oklch(0 0 0 / 1);
-  --shadow-md:
-    4px 4px 0px 0px oklch(0 0 0 / 1), 4px 2px 4px -1px oklch(0 0 0 / 1);
-  --shadow-lg:
-    4px 4px 0px 0px oklch(0 0 0 / 1), 4px 4px 6px -1px oklch(0 0 0 / 1);
-  --shadow-xl:
-    4px 4px 0px 0px oklch(0 0 0 / 1), 4px 8px 10px -1px oklch(0 0 0 / 1);
-  --shadow-2xl: 4px 4px 0px 0px oklch(0 0 0 / 2.5);
+  --radius: 0rem;
+  
+  --shadow-2xs: 0px 1px 2.5px 0px oklch(0.49 0.09 235.00 / 0.03);
+  --shadow-xs: 0px 1px 2.5px 0px oklch(0.49 0.09 235.00 / 0.03);
+  --shadow-sm: 0px 1px 2.5px 0px oklch(0.49 0.09 235.00 / 0.06), 0px 1px 2px -1px oklch(0.49 0.09 235.00 / 0.06);
+  --shadow: 0px 1px 2.5px 0px oklch(0.49 0.09 235.00 / 0.06), 0px 1px 2px -1px oklch(0.49 0.09 235.00 / 0.06);
+  --shadow-md: 0px 1px 2.5px 0px oklch(0.49 0.09 235.00 / 0.06), 0px 2px 4px -1px oklch(0.49 0.09 235.00 / 0.06);
+  --shadow-lg: 0px 1px 2.5px 0px oklch(0.49 0.09 235.00 / 0.06), 0px 4px 6px -1px oklch(0.49 0.09 235.00 / 0.06);
+  --shadow-xl: 0px 1px 2.5px 0px oklch(0.49 0.09 235.00 / 0.06), 0px 8px 10px -1px oklch(0.49 0.09 235.00 / 0.06);
+  --shadow-2xl: 0px 1px 2.5px 0px oklch(0.49 0.09 235.00 / 0.15);
 }
 
 .dark {
-  --background: oklch(0 0 0);
-  --foreground: oklch(1 0 0);
-  --card: oklch(0.32 0 0);
-  --card-foreground: oklch(1 0 0);
-  --popover: oklch(0.32 0 0);
-  --popover-foreground: oklch(1 0 0);
-  --primary: oklch(0.7 0.19 23.04);
-  --primary-foreground: oklch(0 0 0);
-  --secondary: oklch(0.97 0.2 109.61);
-  --secondary-foreground: oklch(0 0 0);
-  --muted: oklch(0.32 0 0);
-  --muted-foreground: oklch(0.85 0 0);
-  --accent: oklch(0.68 0.18 251.63);
-  --accent-foreground: oklch(0 0 0);
-  --destructive: oklch(1 0 0);
-  --border: oklch(1 0 0);
-  --input: oklch(1 0 0);
-  --ring: oklch(0.7 0.19 23.04);
-  --chart-1: oklch(0.7 0.19 23.04);
-  --chart-2: oklch(0.97 0.2 109.61);
-  --chart-3: oklch(0.68 0.18 251.63);
-  --chart-4: oklch(0.74 0.23 142.87);
-  --chart-5: oklch(0.61 0.25 328.13);
-  --sidebar: oklch(0 0 0);
-  --sidebar-foreground: oklch(1 0 0);
-  --sidebar-primary: oklch(0.7 0.19 23.04);
-  --sidebar-primary-foreground: oklch(0 0 0);
-  --sidebar-accent: oklch(0.68 0.18 251.63);
-  --sidebar-accent-foreground: oklch(0 0 0);
-  --sidebar-border: oklch(1 0 0);
-  --sidebar-ring: oklch(0.7 0.19 23.04);
-
-  --shadow-2xs: 0px 1px 2px 0px oklch(0 0 0 / 0.05);
-  --shadow-xs: 0px 1px 2px 0px oklch(0 0 0 / 0.05);
-  --shadow-sm:
-    0px 1px 2px 0px oklch(0 0 0 / 0.1), 0px 1px 2px -1px oklch(0 0 0 / 0.1);
-  --shadow:
-    0px 1px 2px 0px oklch(0 0 0 / 0.1), 0px 1px 2px -1px oklch(0 0 0 / 0.1);
-  --shadow-md:
-    0px 1px 2px 0px oklch(0 0 0 / 0.1), 0px 2px 4px -1px oklch(0 0 0 / 0.1);
-  --shadow-lg:
-    0px 1px 2px 0px oklch(0 0 0 / 0.1), 0px 4px 6px -1px oklch(0 0 0 / 0.1);
-  --shadow-xl:
-    0px 1px 2px 0px oklch(0 0 0 / 0.1), 0px 8px 10px -1px oklch(0 0 0 / 0.1);
-  --shadow-2xl: 0px 1px 2px 0px oklch(0 0 0 / 0.25);
+  --background: oklch(0.18 0.02 271.27);
+  --foreground: oklch(0.90 0.01 238.47);
+  --card: oklch(0.22 0.02 271.67);
+  --card-foreground: oklch(0.90 0.01 238.47);
+  --popover: oklch(0.22 0.02 271.67);
+  --popover-foreground: oklch(0.90 0.01 238.47);
+  --primary: oklch(0.71 0.15 239.15);
+  --primary-foreground: oklch(0.94 0.03 232.39);
+  --secondary: oklch(0.28 0.03 270.91);
+  --secondary-foreground: oklch(0.90 0.01 238.47);
+  --muted: oklch(0.28 0.03 270.91);
+  --muted-foreground: oklch(0.60 0.03 269.46);
+  --accent: oklch(0.28 0.03 270.91);
+  --accent-foreground: oklch(0.90 0.01 238.47);
+  --destructive: oklch(0.64 0.25 19.69);
+  --border: oklch(0.90 0.01 238.47 / 15%);
+  --input: oklch(0.90 0.01 238.47 / 20%);
+  --ring: oklch(0.66 0.13 227.70);
+  --chart-1: oklch(0.66 0.13 227.70);
+  --chart-2: oklch(0.60 0.10 269.83);
+  --chart-3: oklch(0.70 0.15 159.83);
+  --chart-4: oklch(0.80 0.10 100.65);
+  --chart-5: oklch(0.60 0.15 300.14);
+  --sidebar: oklch(0.22 0.02 271.67);
+  --sidebar-foreground: oklch(0.90 0.01 238.47);
+  --sidebar-primary: oklch(0.66 0.13 227.70);
+  --sidebar-primary-foreground: oklch(0.18 0.02 271.27);
+  --sidebar-accent: oklch(0.28 0.03 270.91);
+  --sidebar-accent-foreground: oklch(0.90 0.01 238.47);
+  --sidebar-border: oklch(0.90 0.01 238.47 / 15%);
+  --sidebar-ring: oklch(0.66 0.13 227.70);
+  
+  --shadow-2xs: 0px 1px 2px 0px oklch(0 0 0 / 0.01);
+  --shadow-xs: 0px 1px 2px 0px oklch(0 0 0 / 0.01);
+  --shadow-sm: 0px 1px 2px 0px oklch(0 0 0 / 0.01), 0px 1px 2px -1px oklch(0 0 0 / 0.01);
+  --shadow: 0px 1px 2px 0px oklch(0 0 0 / 0.01), 0px 1px 2px -1px oklch(0 0 0 / 0.01);
+  --shadow-md: 0px 1px 2px 0px oklch(0 0 0 / 0.01), 0px 2px 4px -1px oklch(0 0 0 / 0.01);
+  --shadow-lg: 0px 1px 2px 0px oklch(0 0 0 / 0.01), 0px 4px 6px -1px oklch(0 0 0 / 0.01);
+  --shadow-xl: 0px 1px 2px 0px oklch(0 0 0 / 0.01), 0px 8px 10px -1px oklch(0 0 0 / 0.01);
+  --shadow-2xl: 0px 1px 2px 0px oklch(0 0 0 / 0.03);
 }
 
 @theme inline {
